env/manifests/bp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bp-frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: bp-frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
